fix: update documentation links to use the new general path structure

--- a/development/backend/auth.mdx
+++ b/development/backend/auth.mdx
@@ -4,7 +4,7 @@ description: Technical documentation for the DeployStack backend authentication 
 ---
 
 
-This document provides technical details about the DeployStack backend authentication system implementation. For user-facing authentication configuration, see [Authentication Methods](/auth). For OAuth provider implementation details, see [OAuth Provider Implementation](/development/backend/oauth-providers) and [OAuth2 Server Implementation](/development/backend/oauth2-server).
+This document provides technical details about the DeployStack backend authentication system implementation. For user-facing authentication configuration, see [Authentication Methods](/general/auth). For OAuth provider implementation details, see [OAuth Provider Implementation](/development/backend/oauth-providers) and [OAuth2 Server Implementation](/development/backend/oauth2-server).
 
 ## Architecture Overview
 
