--- a/development/backend/mcp-configuration-architecture.mdx
+++ b/development/backend/mcp-configuration-architecture.mdx
@@ -416,9 +416,9 @@ For specific implementation details:
 - [Backend API](/development/backend/api/) - Complete API endpoint documentation
 - [Database Schema](/development/backend/database/) - Database structure and relationships
 - [Job Queue System](/development/backend/job-queue) - Background job processing for registry sync
-- [Teams](/teams) - Team management and structure
-- [MCP Configuration System](/mcp-configuration) - User-facing configuration guide
-- [MCP Installation](/mcp-installation) - Installation and team setup
-- [MCP Catalog](/mcp-catalog) - Official registry integration details
+- [Teams](/general/teams) - Team management and structure
+- [MCP Configuration System](/general/mcp-configuration) - User-facing configuration guide
+- [MCP Installation](/general/mcp-installation) - Installation and team setup
+- [MCP Catalog](/general/mcp-catalog) - Official registry integration details
 
 The three-tier configuration architecture provides a robust foundation for managing complex MCP server configurations in multi-user team environments while maintaining security, flexibility, and ease of use. The system seamlessly handles both manually created custom servers and automatically synced official registry servers.
