--- a/development/backend/oauth-providers.mdx
+++ b/development/backend/oauth-providers.mdx
@@ -282,4 +282,4 @@ Frontend checks provider status to show login buttons:
 - [OAuth2 Server Implementation](/development/backend/oauth2-server) - OAuth2 server for API access
 - [Security Policy](/development/backend/security) - Security implementation details
 - [Global Settings](/development/backend/global-settings) - Configuration management
-- [GitHub OAuth Setup](/github-oauth-setup) - User-facing GitHub OAuth setup guide
+- [GitHub OAuth Setup](/general/github-oauth-setup) - User-facing GitHub OAuth setup guide
