--- a/development/satellite/mcp-server-token-injection.mdx
+++ b/development/satellite/mcp-server-token-injection.mdx
@@ -227,7 +227,7 @@ private isCacheValid(cachedAt: number, expiresAt: string | null): boolean {
 
 ### Tool Execution Injection
 
-**File**: [services/satellite/src/core/mcp-server-wrapper.ts](https://github.com/deploystackio/deploystack/blob/main/services/satellite/src/core/mcp-server-wrapper.ts:711-760)
+**File**: [services/satellite/src/core/mcp-server-wrapper.ts](https://github.com/deploystackio/deploystack/blob/main/services/satellite/src/core/mcp-server-wrapper.ts)
 
 **Purpose**: Injects OAuth tokens when executing tools on HTTP/SSE MCP servers.
 
@@ -438,7 +438,7 @@ async handleHttpToolCall(serverName: string, originalToolName: string, args: unk
 
 ### Tool Discovery Injection
 
-**File**: [services/satellite/src/services/remote-tool-discovery-manager.ts](https://github.com/deploystackio/deploystack/blob/main/services/satellite/src/services/remote-tool-discovery-manager.ts:376-440)
+**File**: [services/satellite/src/services/remote-tool-discovery-manager.ts](https://github.com/deploystackio/deploystack/blob/main/services/satellite/src/services/remote-tool-discovery-manager.ts)
 
 **Purpose**: Injects OAuth tokens when discovering available tools from HTTP/SSE MCP servers.
 
