--- a/general/github-oauth-setup.mdx
+++ b/general/github-oauth-setup.mdx
@@ -155,7 +155,7 @@ When a user logs in via GitHub, DeployStack stores:
 
 ## Related Documentation
 
-- [GitHub Application](/github-application) - For repository data access and MCP server creation
-- [Global Settings](/global-settings) - Complete global settings reference
+- [GitHub Application](/general/github-application) - For repository data access and MCP server creation
+- [Global Settings](/general/global-settings) - Complete global settings reference
 
 GitHub OAuth provides a seamless authentication experience for your users while maintaining security and proper access control within DeployStack.
