--- a/general/mcp-admin-schema-workflow.mdx
+++ b/general/mcp-admin-schema-workflow.mdx
@@ -28,7 +28,7 @@ DeployStack supports adding MCP servers to the catalog through two methods:
 4. Enriches with GitHub metadata (README, stars, topics)
 5. Stores in catalog ready for team installation
 
-For details on the sync process, see [MCP Catalog - Official Registry Integration](/mcp-catalog#official-mcp-registry-integration).
+For details on the sync process, see [MCP Catalog - Official Registry Integration](/general/mcp-catalog#official-mcp-registry-integration).
 
 ### Path 2: Manual Creation (Custom)
 
@@ -54,7 +54,7 @@ When you manually add custom MCP servers to the catalog, you design the entire c
 - **What users can always customize** (user-level settings like local paths, personal preferences)
 - **Lock/unlock defaults and visibility controls** for each configurable element
 
-For an overview of how the three-tier system works, see [MCP Configuration System](/mcp-configuration). To understand how official registry servers are automatically transformed, see [MCP Catalog - Official Registry Integration](/mcp-catalog#official-mcp-registry-integration).
+For an overview of how the three-tier system works, see [MCP Configuration System](/general/mcp-configuration). To understand how official registry servers are automatically transformed, see [MCP Catalog - Official Registry Integration](/general/mcp-catalog#official-mcp-registry-integration).
 
 ## The Four-Step Manual Creation Workflow
 
@@ -191,7 +191,7 @@ When servers are synced from the official MCP Registry, the transformation happe
 - URL → Template level (locked)
 - Headers → Team/user level based on authentication requirements
 
-For complete details on automatic transformation, see the [Official Registry Integration documentation](/mcp-catalog#official-mcp-registry-integration).
+For complete details on automatic transformation, see the [Official Registry Integration documentation](/general/mcp-catalog#official-mcp-registry-integration).
 
 ## Step 3: Configuration Schema Definition for Manual Servers (Detailed)
 
@@ -428,10 +428,10 @@ The schema system (whether manual or automatic) provides:
 
 For understanding how schemas work across the system:
 
-- [MCP Configuration System](/mcp-configuration) - Overview of the three-tier system schemas enable
-- [MCP Catalog - Official Registry Integration](/mcp-catalog#official-mcp-registry-integration) - How automatic schema transformation works
-- [Team Installation](/mcp-team-installation) - How teams use schemas to configure installations
-- [User Configuration](/mcp-user-configuration) - How users interact with schema boundaries
-- [MCP Catalog](/mcp-catalog) - Where schemas are stored and managed
+- [MCP Configuration System](/general/mcp-configuration) - Overview of the three-tier system schemas enable
+- [MCP Catalog - Official Registry Integration](/general/mcp-catalog#official-mcp-registry-integration) - How automatic schema transformation works
+- [Team Installation](/general/mcp-team-installation) - How teams use schemas to configure installations
+- [User Configuration](/general/mcp-user-configuration) - How users interact with schema boundaries
+- [MCP Catalog](/general/mcp-catalog) - Where schemas are stored and managed
 
 The schema creation system—whether through sophisticated manual categorization or automatic registry transformation—is the foundation that enables secure, flexible MCP server configuration with precise control over configuration inheritance across all teams and users.
