--- a/general/mcp-catalog.mdx
+++ b/general/mcp-catalog.mdx
@@ -56,7 +56,7 @@ The catalog contains servers from two sources:
 
 Servers are organized into categories for easy discovery and filtering. Categories are simple organizational labels that group servers by their purpose or functionality.
 
-For a complete explanation of how MCP categories work, see the [MCP Categories Guide](/mcp-categories).
+For a complete explanation of how MCP categories work, see the [MCP Categories Guide](/general/mcp-categories).
 
 **Note**: Only Global Administrators can create and manage categories.
 
@@ -142,7 +142,7 @@ Each server in the catalog includes comprehensive metadata:
 - **Tags**: Searchable keywords and labels
 - **Status**: Active, deprecated, or maintenance mode
 - **Sync Status**: Whether server is synced from official registry
-- **OAuth Requirement**: Whether server requires OAuth authorization (see [OAuth-Enabled MCP Servers](/mcp-oauth))
+- **OAuth Requirement**: Whether server requires OAuth authorization (see [OAuth-Enabled MCP Servers](/general/mcp-oauth))
 
 #### Technical Specifications
 - **Language**: Programming language (TypeScript, Python, etc.)
@@ -159,7 +159,7 @@ Each server in the catalog includes comprehensive metadata:
 - **Prompts**: Pre-configured prompts and templates
 - **Configuration Schema**: Template definitions for team and user configuration options
 
-For details on how configuration schemas work in DeployStack's three-tier system, see [MCP Configuration System](/mcp-configuration).
+For details on how configuration schemas work in DeployStack's three-tier system, see [MCP Configuration System](/general/mcp-configuration).
 
 #### Repository Integration
 - **Repository URL**: Source code repository (GitHub, GitLab, etc.)
@@ -212,7 +212,7 @@ DeployStack automatically syncs with the official MCP Registry at registry.model
 
 ### GitHub Integration
 
-Integration with GitHub repositories for automatic synchronization and metadata extraction. For complete details on setting up and using GitHub integration, see the [GitHub App Integration Guide](/github-application).
+Integration with GitHub repositories for automatic synchronization and metadata extraction. For complete details on setting up and using GitHub integration, see the [GitHub App Integration Guide](/general/github-application).
 
 **Key Features:**
 - **Automatic Repository Sync**: Pull server metadata from GitHub repositories
@@ -402,7 +402,7 @@ The catalog integrates seamlessly with DeployStack's deployment system:
 - **Repository Access**: Secure GitHub integration
 - **Privacy Controls**: Respect team privacy and data boundaries
 
-For detailed security information about configuration handling, see [MCP Configuration System](/mcp-configuration).
+For detailed security information about configuration handling, see [MCP Configuration System](/general/mcp-configuration).
 
 ## Future Enhancements
 
