--- a/general/mcp-installation.mdx
+++ b/general/mcp-installation.mdx
@@ -6,7 +6,7 @@ description: Learn how to install and manage MCP servers within your team worksp
 
 MCP server installations are how your team actually uses MCP servers from the catalog. Think of the MCP catalog as a "store" where you browse available servers, and installations as the "purchased items" that your team can actually use with your own configurations.
 
-Installations represent the team layer in DeployStack's three-tier configuration system, where teams configure shared settings that all team members use. For complete details about how arguments, environment variables, and credentials work, see the [MCP Configuration System](/mcp-configuration) documentation.
+Installations represent the team layer in DeployStack's three-tier configuration system, where teams configure shared settings that all team members use. For complete details about how arguments, environment variables, and credentials work, see the [MCP Configuration System](/general/mcp-configuration) documentation.
 
 ## Understanding the Connection
 
@@ -41,7 +41,7 @@ graph TD
 - **Team Configuration**: Teams manage the shared configuration layer that all team members inherit
 - **Team Privacy**: Other teams cannot see or access your installations
 
-For detailed information about how team configurations work within the three-tier system, see [MCP Configuration System](/mcp-configuration).
+For detailed information about how team configurations work within the three-tier system, see [MCP Configuration System](/general/mcp-configuration).
 
 ### Why Team-Scoped?
 
@@ -135,8 +135,8 @@ The team-scoped installation system provides strong security boundaries:
 - **Independent Setup**: No shared configuration between teams
 - **Secure Defaults**: Installations use secure default settings
 
-For comprehensive details about DeployStack's security model for configurations, see [MCP Configuration System](/mcp-configuration).
+For comprehensive details about DeployStack's security model for configurations, see [MCP Configuration System](/general/mcp-configuration).
 
 MCP server installations provide the bridge between the global catalog of available servers and your team's actual working environment. They represent the team layer in DeployStack's three-tier configuration system, managing shared settings that all team members inherit while allowing individual customization.
 
-For complete understanding of how installations fit into the broader configuration architecture, see the [MCP Configuration System](/mcp-configuration) documentation.
+For complete understanding of how installations fit into the broader configuration architecture, see the [MCP Configuration System](/general/mcp-configuration) documentation.
