--- a/general/mcp-oauth.mdx
+++ b/general/mcp-oauth.mdx
@@ -145,7 +145,7 @@ Your OAuth tokens are encrypted in the database using AES-256-GCM encryption:
 - Refresh tokens encrypted before storage
 - Only decrypted when Satellite needs them at runtime
 
-For complete security details, see [Security and Privacy](/security).
+For complete security details, see [Security and Privacy](/general/security).
 
 ### Privacy Guarantees
 
@@ -243,10 +243,10 @@ The Satellite will detect expired tokens and return an error. You'll see "Auth R
 
 For complete understanding of OAuth MCP servers in context:
 
-- [MCP Configuration System](/mcp-configuration) - Three-tier architecture (OAuth is separate)
-- [MCP Team Installation](/mcp-team-installation) - How team admins install OAuth servers
-- [MCP User Configuration](/mcp-user-configuration) - User settings and authorization
-- [MCP Catalog](/mcp-catalog) - Discovering OAuth-enabled servers
-- [Security and Privacy](/security) - Token encryption and storage security
+- [MCP Configuration System](/general/mcp-configuration) - Three-tier architecture (OAuth is separate)
+- [MCP Team Installation](/general/mcp-team-installation) - How team admins install OAuth servers
+- [MCP User Configuration](/general/mcp-user-configuration) - User settings and authorization
+- [MCP Catalog](/general/mcp-catalog) - Discovering OAuth-enabled servers
+- [Security and Privacy](/general/security) - Token encryption and storage security
 
 OAuth-enabled MCP servers provide secure, per-user access to external services while maintaining privacy and security through encrypted token storage and automatic token management.
