--- a/general/mcp-user-configuration.mdx
+++ b/general/mcp-user-configuration.mdx
@@ -17,7 +17,7 @@ As a user, you personalize your MCP server experience within team-defined bounda
 - **Simplified Interface** showing only settings you can modify
 - **Credential Privacy** - Your personal credentials are never visible to other team members
 
-The user tier builds on team configurations, which build on global schemas. For an overview of the complete system, see [MCP Configuration System](/mcp-configuration).
+The user tier builds on team configurations, which build on global schemas. For an overview of the complete system, see [MCP Configuration System](/general/mcp-configuration).
 
 ## Configuration Boundaries
 
@@ -38,9 +38,9 @@ Your configuration options are precisely determined by how global administrators
 - **Use Private Credentials** - Configure your own personal credentials that override team settings
 - **Mix Both** - Use team credentials for some services and personal credentials for others
 
-**Note on OAuth-Enabled MCP Servers:** If your team uses OAuth servers (Box, Google Drive, etc.), you must authorize individually with your own account even after your team admin installs the server. For complete details, see [OAuth-Enabled MCP Servers](/mcp-oauth).
+**Note on OAuth-Enabled MCP Servers:** If your team uses OAuth servers (Box, Google Drive, etc.), you must authorize individually with your own account even after your team admin installs the server. For complete details, see [OAuth-Enabled MCP Servers](/general/mcp-oauth).
 
-For details on how global administrators define these boundaries and team administrators control access, see [Admin Schema Workflow](/mcp-admin-schema-workflow) and [Team Installation](/mcp-team-installation).
+For details on how global administrators define these boundaries and team administrators control access, see [Admin Schema Workflow](/general/mcp-admin-schema-workflow) and [Team Installation](/general/mcp-team-installation).
 
 ## User Interface Experience
 
@@ -175,9 +175,9 @@ Environment: {
 
 For complete understanding of user configuration in context:
 
-- [MCP Configuration System](/mcp-configuration) - Overview of the three-tier system
-- [Team Installation](/mcp-team-installation) - How team settings affect your options
-- [Admin Schema Workflow](/mcp-admin-schema-workflow) - How configuration boundaries are precisely defined through schema categorization
-- [Teams](/teams) - Team membership and structure
+- [MCP Configuration System](/general/mcp-configuration) - Overview of the three-tier system
+- [Team Installation](/general/mcp-team-installation) - How team settings affect your options
+- [Admin Schema Workflow](/general/mcp-admin-schema-workflow) - How configuration boundaries are precisely defined through schema categorization
+- [Teams](/general/teams) - Team membership and structure
 
 User configuration represents the final personalization layer in DeployStack's three-tier system, enabling individual productivity while maintaining team security and organizational standards.
