--- a/general/onboard-new-team-members.mdx
+++ b/general/onboard-new-team-members.mdx
@@ -40,7 +40,7 @@ The new team member needs to complete these steps first:
 2. **Select Your Team**: Find the team you want to add members to and click "Manage"
 3. **Add New Member**: Click "Add Member" and enter the new member's email address
 
-Read more about Roles: [Team Roles](/roles)
+Read more about Roles: [Team Roles](/general/roles)
 
 ## Step 3: Complete Team Setup
 
