--- a/general/teams.mdx
+++ b/general/teams.mdx
@@ -46,7 +46,7 @@ Teams serve as comprehensive containers for all your team resources:
 - **Global MCP Server Access**: Browse and use community-wide MCP servers
 - **Server Management**: Team administrators can create, edit, and delete team servers
 - **Version Control**: Track different versions of your team's MCP servers
-- **GitHub Integration**: Automatic synchronization with GitHub repositories (see [GitHub App Integration Guide](/github-application))
+- **GitHub Integration**: Automatic synchronization with GitHub repositories (see [GitHub App Integration Guide](/general/github-application))
 - **Custom Configurations**: Team-specific server settings and parameters
 - **Process History**: Complete logs and monitoring data for team MCP servers
 
@@ -55,7 +55,7 @@ Teams serve as comprehensive containers for all your team resources:
 - **Credentials Management**: Secure storage and sharing of API keys and authentication tokens
 - **Team-Scoped Settings**: Configuration that applies to all team members
 
-For complete details on how DeployStack handles arguments, environment variables, and credentials, see the [MCP Configuration System](/mcp-configuration) documentation.
+For complete details on how DeployStack handles arguments, environment variables, and credentials, see the [MCP Configuration System](/general/mcp-configuration) documentation.
 
 ## Team Management
 
@@ -231,7 +231,7 @@ Each team maintains complete isolation:
 - **Independent Servers**: MCP servers in one team don't affect others
 - **Secure Boundaries**: No cross-team access to resources or credentials
 
-For detailed information about configuration isolation, see [MCP Configuration System](/mcp-configuration).
+For detailed information about configuration isolation, see [MCP Configuration System](/general/mcp-configuration).
 
 ## Working with Teams
 
@@ -280,7 +280,7 @@ For each team, you can:
 
 - **Update Team Name**: Modify the display name
 - **Edit Description**: Change or add team descriptions
-- **Manage Configurations**: Configure team-level settings, credentials, and environment variables (see [MCP Configuration System](/mcp-configuration))
+- **Manage Configurations**: Configure team-level settings, credentials, and environment variables (see [MCP Configuration System](/general/mcp-configuration))
 - **Monitor MCP Servers**: View all MCP servers and their status
 
 ### Understanding Team Slugs
@@ -363,7 +363,7 @@ Your team role affects your ability to:
 
 - Configure new MCP servers
 - Modify server configurations
-- Manage team-level MCP server settings (see [MCP Configuration System](/mcp-configuration))
+- Manage team-level MCP server settings (see [MCP Configuration System](/general/mcp-configuration))
 - Monitor MCP server status
 - Access process logs
 
@@ -380,7 +380,7 @@ Consider creating separate teams for:
 Within each team:
 
 - **Group Related Servers**: Configure related MCP servers in the same team
-- **Shared Configuration**: Use team-level credentials and settings across servers (see [MCP Configuration System](/mcp-configuration))
+- **Shared Configuration**: Use team-level credentials and settings across servers (see [MCP Configuration System](/general/mcp-configuration))
 - **Logical Organization**: Use descriptive names and descriptions
 
 Teams provide the foundation for organized, secure, and efficient MCP server management in DeployStack. By understanding how teams work, you can effectively manage your team resources and maintain clean separation between different projects and environments.
