--- a/self-hosted/docker-compose.mdx
+++ b/self-hosted/docker-compose.mdx
@@ -7,7 +7,7 @@ description: Deploy DeployStack using Docker Compose for a quick and reliable se
 Deploy DeployStack using Docker Compose for a quick and reliable self-hosted installation. This method is recommended for most users as it provides a reliable setup with minimal configuration.
 
 <Info>
-Docker containers are for production hosting or self-hosting. For development contributions, check the [Local Setup](/local-setup) guide.
+Docker containers are for production hosting or self-hosting. For development contributions, check the [Local Setup](/general/local-setup) guide.
 </Info>
 
 <Info>
