docs(quick-start): fix MCP Server link to remove trailing slash

--- a/general/quick-start.mdx
+++ b/general/quick-start.mdx
@@ -147,7 +147,7 @@ Let's make sure your MCP connection is working by testing your pre-installed ser
 
 Your account comes with one pre-installed server, but DeployStack offers access to hundreds of MCP servers from the official registry:
 
-1. **Browse the Catalog**: Visit the [MCP Server](https://cloud.deploystack.io/) in your dashboard
+1. **Browse the Catalog**: Visit the [MCP Server](https://cloud.deploystack.io) in your dashboard
 2. **Choose Servers**: Browse by category or search for specific tools
 3. **Add to Team**: Click "Add to Team" on any server
 4. **Configure Credentials**: Add required credentials (API keys, tokens, etc.)
