docs: update title and description for clarity and consistency in documentation

--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,15 @@
 ---
-title: DeployStack - The MCP Control Plane with Context Optimization
-description: Official DeployStack documentation - The first MCP-as-a-Service platform that solves both management complexity and context window bloat through intelligent hierarchical routing.
+title: DeployStack - MCP Management Platform
+description: Official DeployStack documentation - MCP Management Platform with centralized credential vault, governance, and token optimization for developers and enterprises.
 sidebarTitle: Overview
 ---
 
 
-DeployStack is **The First MCP-as-a-Service Platform**. We solve two critical problems: MCP management complexity (credentials, teams, governance) and context window consumption (90%+ token reduction through hierarchical routing). Just add a URL to VS Code - no installation, no local processes, instant access to all team tools.
+**DeployStack - MCP Management Platform**
+
+Centralized MCP server management, credential vault, governance, and token optimization for developers and enterprises.
+
+DeployStack provides enterprise-grade MCP server management with secure credential storage, team collaboration, complete governance, and 90%+ token reduction through hierarchical routing.
 
 ## User Guides
 
