Add new light logo image in PNG format

--- a/development/satellite/hierarchical-router.mdx
+++ b/development/satellite/hierarchical-router.mdx
@@ -398,7 +398,7 @@ const fuseOptions = {
   keys: [
     { name: 'toolName', weight: 0.4 },          // 40% weight
     { name: 'description', weight: 0.35 },      // 35% weight
-    { name: 'serverSlug', weight: 0.25 }        // 25% weight
+    { name: 'serverName', weight: 0.25 }        // 25% weight
   ],
   includeScore: true,
   minMatchCharLength: 2,
